Compiler/tests/bad/Functions/04_function.rs
// while context

fn add(x : i32, y : i32) -> i32
{
    return 0;
}

fn main(){
  add(5);
}